# src/main/java/hei/student/schoolm/endpoint/rest/security/SecurityConfig.java
@@ -61,6 +61,10 @@ public class SecurityConfig {
                     .hasRole("ADMIN")
                     .requestMatchers(PUT, "/cohorts")
                     .hasRole("ADMIN")
+                    .requestMatchers(PUT, "/groups")
+                    .hasRole("ADMIN")
+                    .requestMatchers(GET, "/groups", "/groups/*", "/groups/*/students")
+                    .hasAnyRole("ADMIN", "TEACHER")
                     .requestMatchers(PUT, "/course-assignments/**")
                     .hasRole("ADMIN")
                     .requestMatchers(DELETE, "/course-assignments/**")
